# c-template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  Makefile  README.md  clib.json  colors_8h.html  colors_8h__dep__incl.map  colors_8h_source.html  command__line_8h__dep__incl.map  command__line_8h_source.html  errors_8h.html  errors_8h__dep__incl.map  errors_8h_source.html  example.c  example_test.c  globals_type.html  index.html  logger_8c__incl.md5  logger_8c_a6362ea8a304cd179fbd42e2971ed71f3_icgraph.md5  logger_8c_a8cf74430151bf53ab52b8b94788186af_icgraph.map  logger_8c_acb35852b4fbddea293c8aa641f5e5524_cgraph.map  logger_8h.html  logger_8h__dep__incl.map  main.c  package.json  random__test_8c_source.html  structargs.js  structbase.html  structcommand__coll__graph.md5  structfile__logger.js
cmake/: FindSphinx.cmake  README.md  UseBreathe.cmake  array_len_test.cmake  arrays_lib.cmake  cli.cmake  colors_test.cmake  command_line.cmake  command_line_lib.cmake  command_line_test.cmake  errors_lib.cmake  errors_test.cmake  logger_lib.cmake  logger_test.cmake  random_lib.cmake  random_test.cmake  returns_lib.cmake  returns_test.cmake  safe_math.cmake  safe_math_lib.cmake  safe_math_test.cmake  safe_mem.cmake  safe_mem_lib.cmake  safe_mem_test.cmake  socket_lib.cmake  socket_test.cmake  wait_group_lib.cmake
cmake/libraries/: colors_lib.cmake  logger_lib.cmake  wait_group_lib.cmake
cmake/misc/: cli.cmake  include.cmake
cmake/pkgs/: UseSphinxDoc.cmake  glib.cmake
cmake/tests/: logger_test.cmake  random_test.cmake  safe_mem_test.cmake  wait_group_test.cmake
d0/dbb/: command__line_8h__incl.map
d1/d22/: logger_8c_aba435ba2ea5433b4dc792c5d8038a0d1_cgraph.md5  logger_8c_adbd079d224c0a17760bd34be2b94d4d4_icgraph.md5  logger_8c_source.html
d1/d8c/: logger_8h.js
d4/d73/: returns_8h_source.html
d4/dae/: structcg__error.js
d4/dcf/: logger_8h__dep__incl.map  logger_8h__dep__incl.md5
d5/db5/: structthe.html
d7/da6/: colors_8h__dep__incl.map
d8/d08/: structargs.js
d8/dcd/: command__line_8c_source.html
d9/d78/: array__test_8c_source.html
da/da3/: structmemory__object.js
dd/d90/: random__test_8c_source.html
de/d45/: errors_8h_source.html
df/ddb/: structan.html
df/dff/: structwraps.html
docs/: Doxyfile.in  conf.py  front_page.md
docs-build/html/: annotated_dup.js  array__test_8c_source.html  colors__test_8c_source.html  command__line_8c_source.html  command__line_8h.js  dir_000003_000001.html  dir_000004_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_d44c64559bbebec7f509842c48db8b23.html  errors_8c_source.html  errors_8h.js  errors_8h__incl.map  files.html  globals_eval.html  globals_func.html  index.html  logger_8c.js  logger_8c_a01cf0356db3e561c2ec43fa766ef56af_icgraph.map  logger_8c_a8cf74430151bf53ab52b8b94788186af_icgraph.md5  logger_8c_aba435ba2ea5433b4dc792c5d8038a0d1_icgraph.map  logger_8h__dep__incl.md5  logger_8h_a01cf0356db3e561c2ec43fa766ef56af_cgraph.map  logger_8h_a1979109bb7f9b3fccd5d35ab62af76b0_cgraph.md5  logger_8h_a6362ea8a304cd179fbd42e2971ed71f3_icgraph.map  logger_8h_aba435ba2ea5433b4dc792c5d8038a0d1_cgraph.map  logger_8h_acb4bc62c4f5124145fdd7813a8eff213_cgraph.map  logger_8h_ad4ca0f60df17abc4a0cfcbd71049aef9_cgraph.md5  logger_8h_ad4ca0f60df17abc4a0cfcbd71049aef9_icgraph.md5  logger_8h_source.html  (+22 more)
html/: annotated.html  annotated_dup.js  array__len_8h_source.html  classes.html  cli_8c_source.html  colors_8c_source.html  colors_8h.js  colors_8h__dep__incl.md5  command__line_8h.html  command__line_8h__dep__incl.md5  command__line_8h__incl.md5  command__line__test_8c_source.html  dir_000001_000003.html  dir_000001_000004.html  dir_000002_000003.html  dir_000002_000004.html  dir_000005_000000.html  dir_000006_000000.html  dir_000007_000000.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5540bc73877c3e47893b63debdd0706f.html  dir_5540bc73877c3e47893b63debdd0706f.js  dir_67b80fb2d2c0f2c95540f8a40bdc610f.html  dir_67b80fb2d2c0f2c95540f8a40bdc610f.js  dir_67b80fb2d2c0f2c95540f8a40bdc610f_dep.map  dir_67b80fb2d2c0f2c95540f8a40bdc610f_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  (+85 more)
include/: cli.h
scripts/: valgrind.sh
search/: all_0.js  all_4.js  all_6.js  all_c.js  all_d.js  classes_2.js  files_2.js  functions_5.js  functions_7.js  functions_9.js  pages_1.js
source/: index.rst
src/: .test_hello.conf.swp  cli.c  cli_test.c  main.c  main_page.c
tests/: template_test.c
(+669 files in other folders)
